--- a/.dockerignore
+++ b/.dockerignore
@@ -22,9 +22,9 @@
 **/charts
 **/docker-compose*
 **/compose.y*ml
-**/Dockerfile/*
 !**/composer.json
 !**/composer.lock
+**/Dockerfile*
 **/node_modules
 **/npm-debug.log
 **/obj
